--- a/docs.adoc
+++ b/docs.adoc
@@ -3,4 +3,4 @@
 
 This documentation describes how to use the Pavel robotic toothbrush. 
 
-WARNING: This toothbrush is not safe to use for children, adults, or pets. 
+NOTE: This toothbrush is totally safe to use for children, adults, or pets. 
